maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: ':' expected but ',' found.
def indiqueLeReste(x,y):Unit={
                    ^JediEscaper:49: error: identifier expected but '}' found.
}
^